fixed issue with 'bikes' div overlapping outside body

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,10 +19,11 @@ div {
 .bike {
   background-image: linear-gradient(to right, orange, yellow);
   border-radius: 15%;
+  margin: calc(1%-3px);
   border: 3px solid orange;
-  padding: 20px;
+  padding: 2%;
   height: 500px;
-  width: 48%
+  width: 44%
 }
 
 .biketitle {
@@ -47,7 +48,7 @@ img {
   top: 350px;
 }
 #kymco {
-  top: 260px; /*height of #main is 96, and 37 for title; and margins around titles*/
+  top: 0px; /*height of #main is 96, and 37 for title; and margins around titles*/
   position: absolute;
   top: 0px;
   left: 0px;
@@ -56,7 +57,7 @@ img {
 #hornet {
   position: absolute;
   top: 0px;
-  left: 55%;
+  left: 52%;
 }
 
 #cbf {
